--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -1,9 +1,9 @@
 banner:
   enable: true
   image: "images/hoa.jpg"
-  contents: "**Arcana:** _A responsive site template freebie by [HTML5 UP](https://html5up.net/)_"
+  contents: ""
   button:
-    contents: "Learn More"
+    contents: ""
     url: "#"
 items:
   - type: highlights
