--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -10,7 +10,7 @@ items:
     items_per_row: 3
     items:
     - title: This Is Important
-      icon: fa-paper-plane
+      icon: fa-calendar
       content: >
         Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl
         amet mattis, sed a rutrum accumsan sed. Suspendisse eu.
