--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -38,4 +38,4 @@ defaultContentLanguage = "en"
         [params.footer.contact_form]
             enabled = true
             header = "Get In Touch"
-            action = ""
+            action = "https://formspree.io/f/mdoqzajr"
