--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -37,5 +37,5 @@ defaultContentLanguage = "en"
 
         [params.footer.contact_form]
             enabled = true
-            header = "Get In Touch"
+            header = "Contact the Board"
             action = "https://formspree.io/f/mdoqzajr"
